IDEMPIERE-3798:Move iDempiere default branch to openjdk 10 (clazz.getDeclaredConstructor().newInstance())