@@ -56,7 +56,7 @@ public class DefaultModelValidatorFactory implements IModelValidatorFactory {
 			}
 			if (clazz != null) {
 				try {
-					validator = (ModelValidator)clazz.newInstance();
+					validator = (ModelValidator)clazz.getDeclaredConstructor().newInstance();
 				} catch (Exception e) {
 					e.printStackTrace();
 				} 
