@@ -170,7 +170,7 @@ public class ExportHelper {
 		String javaClass = expProcessor_Type.getJavaClass();
 		try {
 			Class<?> clazz = Class.forName(javaClass);
-			IExportProcessor exportProcessor = (IExportProcessor)clazz.newInstance();
+			IExportProcessor exportProcessor = (IExportProcessor)clazz.getDeclaredConstructor().newInstance();
 
 			exportProcessor.process(po.getCtx(), mExportProcessor, outDocument, Trx.get( po.get_TrxName(), false ));
 
